Work on AGHQ chapter

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -36,11 +36,11 @@ It is Bayesian in the sense that I use probability models to arrive at conclusio
 It is applied and methodological in the sense that I am concerned with real world questions and the means to answer them.
 
 The real world questions relate to surveillance of the HIV epidemic in sub-Saharan Africa.
-Millions of people are impacted by HIV each year.
+Millions of people are impacted by HIV every year.
 Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination. 
 
-The data in this thesis relate to people's answers to survey questions or use of healthcare facilities.
-It has particular positions in space and time which should be taken into account.
+The data I use relate to people's answers to survey questions or use of healthcare facilities.
+It has location in space and time which should be taken into account.
 Spatio-temporal data, while diverse, has distinctive commonalities which make its collective study worthwhile.
 
 Computation is an essential part of modern statistical practice.
