--- a/references.bib
+++ b/references.bib
@@ -756,3 +756,59 @@ URL= {https://www.r-inla.org/faq},
   year={2022},
   publisher={Wiley Online Library}
 }
+
+@article{leppik1985double,
+  title={A double-blind crossover evaluation of progabide in partial seizures},
+  author={Leppik, IE and Dreifuss, FE and Bowman-Cloyd, T and Santilli, N and Jacobs, M and Crosby, C and Cloyd, J and Stockman, J and Graves, N and Sutula, T and others},
+  journal={Neurology},
+  volume={35},
+  number={4},
+  pages={285},
+  year={1985}
+}
+
+@article{thall1990some,
+  title={Some covariance models for longitudinal count data with overdispersion},
+  author={Thall, Peter F and Vail, Stephen C},
+  journal={Biometrics},
+  pages={657--671},
+  year={1990},
+  publisher={JSTOR}
+}
+
+@article{breslow1993approximate,
+  title={Approximate inference in generalized linear mixed models},
+  author={Breslow, Norman E and Clayton, David G},
+  journal={Journal of the American statistical Association},
+  volume={88},
+  number={421},
+  pages={9--25},
+  year={1993},
+  publisher={Taylor \& Francis}
+}
+
+@article{spiegelhalter1996bugs,
+  title={BUGS 0.5 Examples},
+  author={Spiegelhalter, David and Thomas, Andrew and Best, Nicky and Gilks, Wally},
+  journal={MRC Biostatistics Unit, Institute of Public health, Cambridge, UK},
+  volume={256},
+  year={1996}
+}
+
+@article{martino2019integrated,
+  title={Integrated nested Laplace approximations (INLA)},
+  author={Martino, Sara and Riebler, Andrea},
+  journal={arXiv preprint arXiv:1907.01248},
+  year={2019}
+}
+
+@inproceedings{skaug2009approximate,
+  author = {Skaug, Hans J.},
+  title = {{Discussion of "Approximate Bayesian inference for latent Gaussian models by using integrated nested Laplace approximations"}},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume = {71},
+  number = {2},
+  pages={319--392},
+  year={2009},
+  publisher={Wiley Online Library}
+}
