--- a/templates/template.tex
+++ b/templates/template.tex
@@ -208,11 +208,20 @@ $endif$
 \newcommand{\y}{\mathbf{y}}
 \newcommand{\z}{\mathbf{z}}
 \newcommand{\bb}{\mathbf{b}}
+\newcommand{\Hb}{\mathbf{H}}
 \newcommand{\bphi}{\bm{\phi}}
 \newcommand{\brho}{\bm{\rho}}
 \newcommand{\btheta}{\bm{\theta}}
 \newcommand{\bmeta}{\bm{\eta}}
 \newcommand{\bvartheta}{\bm{\vartheta}}
+\newcommand{\bmu}{\bm{\mu}}
+
+\newcommand{\cmark}{\ding{51}}
+\newcommand{\xmark}{\ding{55}}
+
+\usepackage{amsmath}
+\DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator*{\argmax}{arg\,max}
 
 \RequirePackage{bm}
 
